# isimip-data-analysis

./: .batch_script.sh.swp  .gitignore  README.md  SPEI_Check_Single_Cell.py  SPEI_Check_Single_Cell_RESUME.py  TEMP_SPEI_continue_step7.py  batch_script.sh  pyproject.toml
SPEI_Check_Single_Cell/: 01_pr_raw_daily.csv  01_pr_raw_daily.nc  02_pr_mm_day.csv  02_pr_mm_day.nc  03_pr_mm_month.csv  03_pr_mm_month.nc  04_pet_mm_day.csv  04_pet_mm_day.nc  05_pet_mm_month.csv  05_pet_mm_month.nc  06_pet_mm_month_aligned.csv  06_pet_mm_month_aligned.nc  06_pr_mm_month_aligned.csv  06_pr_mm_month_aligned.nc  07_pr_pet_aligned_mm_month.nc  07_wb_mm_month.csv  07_wb_mm_month.nc
SPEI_Check_Single_Cell_CONUS/: 01_pr_raw_daily.csv  01_pr_raw_daily.nc  02_pr_mm_day.csv  02_pr_mm_day.nc  03_pr_mm_month.csv  03_pr_mm_month.nc  04_pet_mm_day.csv  04_pet_mm_day.nc  05_pet_mm_month.csv  05_pet_mm_month.nc  06_pet_mm_month_aligned.csv  06_pet_mm_month_aligned.nc  06_pr_mm_month_aligned.csv  06_pr_mm_month_aligned.nc  07_wb_mm_month.csv  07_wb_mm_month.nc
isimip_drought/: __init__.py  cli.py  mcwd.py  pet.py  spei.py  spi.py  utils.py
marias-skripte/: calc_pet_penman.py  compute_mcwd.py  compute_spei.py  compute_spi.py  cut_to_conus.py  preprocess_units_avg_monthly.py  standardize_MCWD.py  unified_monthly_preprocessing.py
