[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isimip-drought"
version = "0.1.0"
description = "Drought indices (SPI, SPEI, MCWD) for ISIMIP climate data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["drought", "SPI", "SPEI", "MCWD", "climate", "ISIMIP"]


dependencies = [
    "numpy>=1.21",
    "xarray>=2022.0",
    "scipy>=1.7",
    "pandas>=1.3",
    "netCDF4>=1.5",
    "dask>=2022.0",
    "click>=8.0",
]


[project.scripts]
isimip-drought = "isimip_drought.cli:main"

[project.urls]
Homepage = "https://github.com/mo-dkrz/isimip-drought"
Documentation = "https://github.com/mo-dkrz/isimip-drought#readme"
Repository = "https://github.com/mo-dkrz/isimip-drought"

[tool.setuptools.packages.find]
where = ["."]
include = ["isimip_drought*"]

